' Generated by UML Generator
' Encoded: TP6n2i8m48RtFCMD5IdeMaGK9q4dnKKSOdhKqpQHvCnWgSzkQdHerIcNyF7z_9UPOsdvLfN2NKXVfPKLg58wDsUsTBmnBfNH6xeZZCI9SWH5LfKen8k2bIdSKfzHiR5G2u1X7OnCgW5FRfp11gqdXJjo5900f6c7gYJfHDh21JGawc9_66JW3UMY-OHq7Q-OXm_kDVB9v36UZEvd-FQ-u4NhI5GyCtW_JBRJhvpVlbZhBOj8KhMUE7T5dNsawRJVlrUb9VwqcA7Emxyy0G
' URL: http://www.plantuml.com/plantuml/uml/TP6n2i8m48RtFCMD5IdeMaGK9q4dnKKSOdhKqpQHvCnWgSzkQdHerIcNyF7z_9UPOsdvLfN2NKXVfPKLg58wDsUsTBmnBfNH6xeZZCI9SWH5LfKen8k2bIdSKfzHiR5G2u1X7OnCgW5FRfp11gqdXJjo5900f6c7gYJfHDh21JGawc9_66JW3UMY-OHq7Q-OXm_kDVB9v36UZEvd-FQ-u4NhI5GyCtW_JBRJhvpVlbZhBOj8KhMUE7T5dNsawRJVlrUb9VwqcA7Emxyy0G
' Generated on: 2025-12-15T09:59:50.171508207

@startuml
skinparam classAttributeIconSize 0
hide circle

class LogsInjector {
  +{static} vis1: ServiceVisitor
  --
  +{static} main(args: String[]): void
}

class ServiceVisitor {
  ~v1: MethodInjectionVisitor
  --
  +visitCtClass(ctClass: CtClass<T>): void
}

class MethodInjectionVisitor {
  +visitCtMethod(m: CtMethod<T>): void
}

LogsInjector --> ServiceVisitor
ServiceVisitor --> MethodInjectionVisitor
@enduml